--- a/css/style.css
+++ b/css/style.css
@@ -55,28 +55,57 @@ body {
   font-style: italic;
   margin-bottom: 1rem;
 }
-
-.btn-move-container {
+.btn-move-container{
   display: flex;
   justify-content: flex-end;
 }
-
-.btn-move {
-  margin: 20px 0 0 10px;
-  background-color: #808080; /* Màu xám */
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
+.btn-donate {
+  --clr-font-main: hsla(0 0% 20% / 100);
+  --btn-bg-1: hsla(194 100% 69% / 1);
+  --btn-bg-2: hsla(217 100% 56% / 1);
+  --btn-bg-color: hsla(360 100% 100% / 1);
+  --radii: 0.5em;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
+  padding: 0.9em 1.4em;
+  min-width: 120px;
+  min-height: 44px;
+  font-size: var(--size, 1rem);
+  font-weight: 500;
+  transition: 0.8s;
+  background-size: 280% auto;
+  background-image: linear-gradient(
+    325deg,
+    var(--btn-bg-2) 0%,
+    var(--btn-bg-1) 55%,
+    var(--btn-bg-2) 90%
+  );
+  border: none;
+  border-radius: var(--radii);
+  color: var(--btn-bg-color);
+  box-shadow:
+    0px 0px 20px rgba(71, 184, 255, 0.5),
+    0px 5px 5px -1px rgba(58, 125, 233, 0.25),
+    inset 4px 4px 8px rgba(175, 230, 255, 0.5),
+    inset -4px -4px 8px rgba(19, 95, 216, 0.35);
+    margin: 0 0;
 }
 
-.btn-move:hover {
-  background-color: #ff3d00; /* Màu đỏ khi hover */
-  box-shadow: 0 4px 10px rgba(255, 61, 0, 0.5);
-} 
+.btn-donate:hover {
+  background-position: right top;
+}
+
+.btn-donate:is(:focus, :focus-visible, :active) {
+  outline: none;
+  box-shadow:
+    0 0 0 3px var(--btn-bg-color),
+    0 0 0 6px var(--btn-bg-2);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .btn-donate {
+    transition: linear;
+  }
+}
 
 /* Thông tin chi tiết */
 .body-test-details {
@@ -178,10 +207,7 @@ body {
     transform: translateY(0);
 }
 
-/* Loader Transition */
-#loading {
-    transition: opacity 0.5s ease;
-}
+
 
 .name-sub{
   color: var(--text-gray);
